# virtual_environments

./: .gitignore  README.md  scrapy.tgz
ansible/: Dockerfile  README.md  docker_pull.yml
aws/: Makefile  requirements.txt
databricks/: Makefile  databricks_count_v3.py  databricks_hcp_pl_duplicates.py  databricks_identify_null_fields.py  databricks_nulls_fields.py  databricks_nulls_fields_v2.py  requirements.txt  sql_performance.py  test_csv_databricks.py  test_json_databricks.py  test_json_v2_databricks.py  test_simple_databricks.py  text_json_pagination_databricks.py
docker/: Dockerfile  commands.txt  examples.tgz  python_script.py
docker-compose/: README.md  docker-compose.yml
embeddings/milvus/milvus_tests/: create_scientific_articles_collection.py  insert_scientific_articles.py  main.py  pyproject.toml  query_scientific_articles.py
gRPC/: .~lock.gRPC.odp#  A gRPC C++ introduction. gRPC C++ introduction | by Andrew Vetovitz | Medium.html  README.md  gRPC.odp  gRPC.txt
go/: Makefile  arrays.go  channel_directions.go  channels.go  closures.go  enums.go  errors.go  functions_variadic.go  go.txt  goroutines.go  interfaces.go  maps.go  methods.go  range.go  select.go  slices_copy.go  struct.go  struct_embedding.go  timeouts.go  vars.go
google/: Makefile  requirements.txt
iot/: iot_gateway.py  smart-thermostat.yaml
kubernetes/: README.md  kubernetes_master.sh  kubernetes_slave.sh  vagrantfile
langchain/ice_breaker/: ice_breaker.py  pyproject.toml
mcp/: .coverage  .env  Dockerfile  Makefile  README.md  docker-compose.yml  mcp_client.py  requirements.txt  (+3 more)
(+523 files in other folders)
