[project]
name = "milvus-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "flagembedding>=1.3.5",
    "peft>=0.18.0",
    "pymilvus[model]>=2.6.4",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
]
